[package]
name = "redis-server"
version = "0.1.0"
authors = ["zzyyyww <zzyyyww9595@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
threadpool = "1.7.1"
#tikv-client = "~0.1"
futures = "0.1"

[dependencies.tikv-client]
git = "https://github.com/GlitterIsMe/client-rust.git"
branch  = "master"