[package]
name = "redis-server"
version = "0.1.0"
authors = ["zzyyyww <zzyyyww9595@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
threadpool = "1.7.1"
futures = "0.1"

grpcio = { version = "0.4", features = [ "secure" ] }
protobuf = "~2.1"


[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
branch  = "raft-0.5.0"
